--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="assets/style.css" rel="stylesheet" type="text/css">
+    <script src="assets/script.js" type="text/javascript"></script>
 </head>
 <body>
 
 
 
-<script src="./script.js" type="text/javascript"></script>
+
 </body>
 </html>
