--- a/index.html
+++ b/index.html
@@ -4,12 +4,32 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link href="assets/style.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Nunito" rel="stylesheet">
     <script src="assets/script.js" type="text/javascript"></script>
 </head>
 <body>
 
+<div class="heading-project">
+    <h1 class="heading">Welcome To Local Weather System</h1>
+</div>
 
+<div class="current-city">
+    <h2>Current Location : </h2>
+</div>
 
+<div class="current-temprature">
+    <h2>Current Temperature : </h2>
+    <h3>Max Temp Of The Day : </h3>
+    <h3>Min Temp Of The Day :</h3>
+</div>
+
+<div class="weather-image">
+    <img src="assets/weather.png" alt="weather-cloud image">
+</div>
+
+<div class="footer">
+    <p>Developed For Freecodecamp By Ashish Kumar Goyal</p>
+</div>
 
 </body>
 </html>
