--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Title</title>
     <link href="assets/style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Nunito" rel="stylesheet">
+
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" type="text/javascript"></script>
     <script src="assets/script.js" type="text/javascript"></script>
 </head>
 <body>
