--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 </div>
 
 <div class="current-temprature">
-    <h2>Current Temperature : </h2>
-    <h3>Max Temp Of The Day : </h3>
-    <h3>Min Temp Of The Day :</h3>
+    <h2>Current Temperature : <span class="temp"></span></h2>
+    <h3>Max Temp Of The Day : <span class="temp_max"></span></h3>
+    <h3>Min Temp Of The Day : <span class="temp_min"></span></h3>
 </div>
 
 <div class="weather-image">
