--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </div>
 
 <div class="current-city">
-    <h2>Current Location : </h2>
+    <h2>Current Location : <span class="current_location"></span></h2>
 </div>
 
 <div class="current-temprature">
@@ -26,7 +26,7 @@
 </div>
 
 <div class="weather-image">
-    <img src="assets/weather.png" alt="weather-cloud image">
+    <!--<img src="assets/weather.png" alt="weather-cloud image">-->
 </div>
 
 <div class="footer">
