--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link href="assets/style.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Nunito" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway|Open+Sans|Nunito" rel="stylesheet">
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" type="text/javascript"></script>
     <script src="assets/script.js" type="text/javascript"></script>
