--- a/index.html
+++ b/index.html
@@ -21,8 +21,14 @@
 
 <div class="current-temprature">
     <h2>Current Temperature : <span class="temp"></span></h2>
-    <h3>Max Temp Of The Day : <span class="temp_max"></span></h3>
-    <h3>Min Temp Of The Day : <span class="temp_min"></span></h3>
+</div>
+
+<div class="weather-desc" style="text-align: center">
+
+</div>
+
+<div class="wind-speed" style="text-align: center">
+
 </div>
 
 <div class="weather-image">
