--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
     <h2>Current Temperature : <span class="temp"></span></h2>
 </div>
 
-<div class="weather-desc" style="text-align: center">
 
-</div>
 
 <div class="wind-speed" style="text-align: center">
+    <h2>Wind Speed : <span class="wind-speed"></span></h2>
+</div>
+
+<div class="weather-desc" style="text-align: center">
 
 </div>
 
